# DoubleScara-ROS

./: README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/.private/fake_ar_publisher/: .catkin  local_setup.sh
devel/.private/position_pub/: .catkin  setup.sh
devel/include/fake_ar_publisher/: ARMarker.h
devel/include/position_pub/: Num.h
devel/lib/fake_ar_publisher/: fake_ar_publisher_node
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  fake_ar_publisher.pc
devel/lib/position_pub/: listener  talker
logs/position_pub/: build.cmake.000.log.stderr
src/: Dropped Text.txt
src/arduino_rosserial/: arduino_rosserial.ino
src/collision_checker/: CMakeLists.txt  package.xml  readme.txt
src/collision_checker/scripts/: collision_checker.py
src/forward_kinematics/: CMakeLists.txt  package.xml  readme.txt
src/forward_kinematics/launch/: forward_kinematics.launch
src/forward_kinematics/src/: forward_kinematics.cpp
src/inverse_kinematic/: CMakeLists.txt  package.xml  readme.txt
src/inverse_kinematic/src/: main.cpp
src/position_pub/: CMakeLists.txt  package.xml
src/robot_files/: CMakeLists.txt  package.xml  readme.txt
src/robot_publish/: CMakeLists.txt  package.xml
src/urdf/: doubleScara.urdf
src/user_interface/: CMakeLists.txt  package.xml
src/user_interface_scara/: CMakeLists.txt  package.xml
(+70 files in other folders)
